# salomon

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
src/salomon/: cli.py  config.py  dataset.py  features.py  plots.py
src/salomon/extraction/: __init__.py  c_cpp_extractor.py  file_discovery.py  function_extractor.py  git_tools.py  models.py
src/salomon/modeling/: predict.py  train.py
